syntax = "proto3";
package types;

message Signature {
    string R = 1;
    string S = 2;
}

message PublicKey {
    bytes PublicKey = 1;
}

message Hash {
    bytes Hash = 1;
}

message UtxoEntry {
    bool IsCoinbase = 1;
    bool FromMainChain = 2;
    uint32 BlockHeight = 3;
    map<uint32, Utxo> SparseOutputs = 4;
}

message Utxo {
    UtxoHeader UtxoHeader = 1;
    bool Spent = 2;
    uint64 amount = 3;
}

message UtxoHeader {
    int32 Version = 1;
    Hash PrevTxHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

enum TxType {
     QUERY = 0;
     STORAGE = 1;
}

message Tx {
    repeated Utxo UtxoIn = 1;
    repeated Utxo UtxoOut = 2;
    TxType type = 3;
    string Content = 4;
}

message NodeID {
    string NodeID = 1;
}

message Nonce {
    uint64 A = 1;
    uint64 B = 2;
    uint64 C = 3;
    uint64 D = 4;
}

message Node {
    NodeID ID = 1;
    string Addr = 2;
    PublicKey PublicKey = 3;
    Nonce Nonce = 4;
}

message AccountAddress {
    string AccountAddress = 1;
}

message Header {
    int32 Version = 1;
    NodeID Producer = 2;
    Hash Root = 3;
    Hash Parent = 4;
    Hash MerkleRoot = 5;
    int64 Timestamp = 6;
}

message SignedHeader {
    Header Header = 1;
    Hash BlockHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message State {
    Hash Head = 1;
    int32 Height = 2;
}

message BPTx {
    Hash TxHash = 1;
    BPTxData TxData = 2;
}

message BPTxData {
    uint64 AccountNonce = 1;
    AccountAddress Recipient = 2;
    bytes Amount = 3;
    bytes Payload = 4;

    Signature Signature = 5;
    PublicKey Signee = 6;
}

message BPHeader {
    int32 Version = 1;
    AccountAddress Producer = 2;
    Hash Root = 3;
    Hash Parent = 4;
    Hash MerkleRoot = 5;
    int64 Timestamp = 6;
}

message BPSignedHeader {
    BPHeader Header = 1;
    Hash BlockHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message BPBlock {
    BPSignedHeader Header = 1;
    repeated BPTx Tx = 2;
}
